fix overlapping sidebar /w footer when empty theme queue (bug 857072)

--- a/media/css/devreg/themes_review.styl
+++ b/media/css/devreg/themes_review.styl
@@ -137,7 +137,7 @@ h2 a:last-child {
 
 .theme-queue {
     clear: both;
-    margin-bottom: 350px;
+    padding-bottom: 350px;
     width: 75%;
     .theme {
         display: block;
